# fired-festival

./: .dockerignore  CLAUDE.md  Dockerfile  HARNESS.md  IMPLEMENTATION.md  README.md  RESEARCH.md  STRATEGY.md  architecture-1-page.html  architecture-doc-template.html  architecture.html  guardrails.yaml  main.py  pyproject.toml  railway.toml
data/: harness.db
docs/plans/: 2026-06-12-001-feat-ops-runbook-harness-plan.md
docs/specs/: BUILD-ORDER.md  IMPLEMENTATION-SPEC.md
docs/specs/units/: u00-project-setup.md  u01-models.md  u02-guardrails.md  u03-alarms.md  u04-checkpoints.md  u05-material.md  u06-tools.md  u07-loop.md  u08-agents.md  u09-api.md  (+2 more)
fixtures/alerts/: dns_failure_cdn.json  high_cpu_web_api.json  hung_query_postgres.json  unknown_service.json
infra/: app.py  harness_stack.py  requirements.txt
infra/cdk.out/: OpsRunbookHarness.assets.json  OpsRunbookHarness.metadata.json  OpsRunbookHarness.template.json  manifest.json  tree.json
src/agents/: base.py  claude_agent.py  mock_agent.py  ollama_agent.py  openai_agent.py  openrouter_agent.py
src/api/: routes.py
src/aws/: cloudwatch.py  discovery.py  ec2.py
src/db/: store.py
src/harness/: alarms.py  checkpoints.py  guardrails.py  loop.py  material.py  metrics.py  models.py  run_state.py
src/static/: index.html  trigger.html
src/tools/: __init__.py  check_status.py  flush_dns.py  kill_query.py  read_logs.py  registry.py  restart_service.py
tests/: test_agents.py  test_alarms.py  test_api.py  test_checkpoints.py  test_guardrails.py  test_loop.py  test_material.py  test_models.py  test_tools.py
