[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ops-runbook-harness"
version = "0.1.0"
description = "AI agent harness for infrastructure incident remediation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "anthropic>=0.52.0",
    "openai>=1.82.0",
    "pydantic>=2.11.0",
    "pyyaml>=6.0.2",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pyright>=1.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pyright]
pythonVersion = "3.12"
include = ["src"]
